src/mobius.atp/mobius.cvc3/cvc3-20090730/src/parser/parsePL.output
Terminals which are not used

   "MOD"
   "DIV"


State 394 conflicts: 1 shift/reduce
State 513 conflicts: 1 shift/reduce
State 517 conflicts: 1 shift/reduce


Grammar

    0 $accept: cmd $end

    1 cmd: TypeDecl ';'
    2    | ConstDecl ';'
    3    | other_cmd ';'
    4    | ';'
    5    | DONE_TOK

    6 other_cmd: Assert
    7          | Query
    8          | Dbg
    9          | Trace
   10          | Option
   11          | Help
   12          | Transform
   13          | Print
   14          | Call
   15          | Echo
   16          | Include
   17          | DumpCommand
   18          | Where
   19          | Push
   20          | Pop
   21          | PopTo
   22          | Context
   23          | Substitute
   24          | Get_Child
   25          | Get_Op
   26          | Get_Type
   27          | Check_Type
   28          | Forget
   29          | Arith_Var_Order

   30 Arith_Var_Order: "ARITH_VAR_ORDER" '(' Exprs ')'

   31 Assert: "ASSERT" Expr

   32 Query: "QUERY" Expr
   33      | "CHECKSAT" Expr
   34      | "CHECKSAT"
   35      | "CONTINUE"
   36      | "RESTART" Expr

   37 Dbg: "DBG" StringLiteral
   38    | "DBG"

   39 Trace: "TRACE" StringLiteral
   40      | "UNTRACE" StringLiteral

   41 Option: "OPTION" StringLiteral Numeral
   42       | "OPTION" StringLiteral "-" Numeral
   43       | "OPTION" StringLiteral StringLiteral

   44 Help: "HELP" StringLiteral
   45     | "HELP"

   46 Transform: "TRANSFORM" Expr

   47 Print: "PRINT" Expr
   48      | "PRINT_TYPE" Type

   49 Call: "CALL" Identifier Expr

   50 Echo: "ECHO" StringLiteral
   51     | "ECHO"

   52 Include: "INCLUDE" StringLiteral

   53 DumpCommand: "DUMP_PROOF"
   54            | "DUMP_ASSUMPTIONS"
   55            | "DUMP_SIG"
   56            | "DUMP_TCC"
   57            | "DUMP_TCC_ASSUMPTIONS"
   58            | "DUMP_TCC_PROOF"
   59            | "DUMP_CLOSURE"
   60            | "DUMP_CLOSURE_PROOF"

   61 Where: "WHERE"
   62      | "ASSERTIONS"
   63      | "ASSUMPTIONS"
   64      | "COUNTEREXAMPLE"
   65      | "COUNTERMODEL"

   66 Push: "PUSH" Numeral
   67     | "PUSH"
   68     | "PUSH_SCOPE" Numeral
   69     | "PUSH_SCOPE"

   70 Pop: "POP" Numeral
   71    | "POP"
   72    | "POP_SCOPE" Numeral
   73    | "POP_SCOPE"

   74 PopTo: "POPTO" Numeral
   75      | "POPTO"
   76      | "POPTO_SCOPE" Numeral
   77      | "POPTO_SCOPE"
   78      | "RESET"

   79 Context: "CONTEXT" StringLiteral
   80        | "CONTEXT"

   81 Forget: "FORGET" Identifier

   82 Get_Type: "GET_TYPE" Expr

   83 Check_Type: "CHECK_TYPE" Expr ':' Type

   84 Get_Child: "GET_CHILD" Expr Numeral

   85 Get_Op: "GET_OP" Expr

   86 Substitute: "SUBSTITUTE" Identifier ':' Type '=' Expr '[' Identifier ":=" Expr ']'

   87 Identifier: ID_TOK

   88 StringLiteral: STRINGLIT_TOK

   89 Numeral: NUMERAL_TOK

   90 Binary: BINARY_TOK

   91 Hex: HEX_TOK

   92 Type: Identifier
   93     | TypeNotIdentifier

   94 TypeNotIdentifier: ArrayType
   95                  | FunctionType
   96                  | BasicType
   97                  | SubrangeType
   98                  | TupleType
   99                  | RecordType
  100                  | TypeLetExpr
  101                  | BitvectorType
  102                  | SubType
  103                  | '(' Type ')'

  104 TypeDef: Type
  105        | ScalarType

  106 DataType: "DATATYPE" SingleDataTypes "END"

  107 SingleDataTypes: SingleDataType
  108                | SingleDataTypes ',' SingleDataType

  109 SingleDataType: Identifier '=' Constructors

  110 Constructors: Constructor
  111             | Constructors "|" Constructor

  112 Constructor: Identifier
  113            | Identifier '(' VarDecls ')'

  114 VarDecls: VarDecl
  115         | VarDecls ',' VarDecl

  116 VarDecl: Identifier ':' Type

  117 FunctionType: '[' Type "->" Type ']'
  118             | Type "->" Type
  119             | '(' TypeList ')' "->" Type

  120 RecordType: "[#" FieldDecls "#]"

  121 FieldDecls: FieldDecl
  122           | FieldDecls ',' FieldDecl

  123 FieldDecl: Identifier ':' Type

  124 TupleType: '[' TypeList ']'

  125 TypeList: Type ',' Type
  126         | TypeList ',' Type

  127 ArrayType: "ARRAY" Type "OF" Type

  128 ScalarType: '{' IDs '}'

  129 SubType: "SUBTYPE" '(' Expr ')'
  130        | "SUBTYPE" '(' Expr ',' Expr ')'

  131 BasicType: "BOOLEAN"
  132          | Real
  133          | Int

  134 BitvectorType: "BITVECTOR" '(' Numeral ')'

  135 Real: "REAL"

  136 Int: "INT"

  137 SubrangeType: '[' LeftBound ".." RightBound ']'

  138 LeftBound: '_'
  139          | Numeral
  140          | "-" Numeral

  141 RightBound: '_'
  142           | Numeral
  143           | "-" Numeral

  144 reverseIDs: Identifier
  145           | Identifier ',' reverseIDs

  146 IDs: reverseIDs

  147 Expr: Identifier
  148     | Numeral
  149     | Binary
  150     | Hex
  151     | Expr '(' Exprs ')'
  152     | "SIMULATE" '(' Exprs ')'
  153     | Expr '[' Expr ']'
  154     | Expr '.' Identifier
  155     | Expr '.' Numeral
  156     | Expr "WITH" Updates
  157     | Lambda
  158     | QuantExpr
  159     | LetExpr
  160     | ArrayLiteral
  161     | RecordLiteral
  162     | TupleLiteral
  163     | Conditional
  164     | "TRUE"
  165     | "FALSE"
  166     | "-" Expr
  167     | "NOT" Expr
  168     | "IS_INTEGER" Expr
  169     | "TCC" '(' Expr ')'
  170     | Expr '=' Expr
  171     | Expr "/=" Expr
  172     | Expr "XOR" Expr
  173     | OrExpr
  174     | AndExpr
  175     | Expr "=>" Expr
  176     | Expr "<=>" Expr
  177     | Expr "+" Expr
  178     | Expr "-" Expr
  179     | Expr "*" '(' Expr ',' Expr ')'
  180     | Expr "*" Expr
  181     | Expr "^" Expr
  182     | Expr "/" Expr
  183     | Expr ">" Expr
  184     | Expr ">=" Expr
  185     | "FLOOR" '(' Expr ')'
  186     | Expr "<" Expr
  187     | Expr "<=" Expr
  188     | '(' Expr ')'
  189     | "~" Expr
  190     | Expr '[' NUMERAL_TOK ':' NUMERAL_TOK ']'
  191     | Expr "&" Expr
  192     | Expr "|" Expr
  193     | Expr "<<" NUMERAL_TOK
  194     | Expr ">>" NUMERAL_TOK
  195     | "BVXOR" '(' Expr ',' Expr ')'
  196     | "BVNAND" '(' Expr ',' Expr ')'
  197     | "BVNOR" '(' Expr ',' Expr ')'
  198     | "BVCOMP" '(' Expr ',' Expr ')'
  199     | "BVXNOR" '(' Expr ',' Expr ')'
  200     | "SX" '(' Expr ',' NUMERAL_TOK ')'
  201     | "BVZEROEXTEND" '(' Expr ',' NUMERAL_TOK ')'
  202     | "BVREPEAT" '(' Expr ',' NUMERAL_TOK ')'
  203     | "BVROTL" '(' Expr ',' NUMERAL_TOK ')'
  204     | "BVROTR" '(' Expr ',' NUMERAL_TOK ')'
  205     | "BVLT" '(' Expr ',' Expr ')'
  206     | "BVGT" '(' Expr ',' Expr ')'
  207     | "BVLE" '(' Expr ',' Expr ')'
  208     | "BVGE" '(' Expr ',' Expr ')'
  209     | "BVSLT" '(' Expr ',' Expr ')'
  210     | "BVSGT" '(' Expr ',' Expr ')'
  211     | "BVSLE" '(' Expr ',' Expr ')'
  212     | "BVSGE" '(' Expr ',' Expr ')'
  213     | Expr "@" Expr
  214     | "INTTOBV" '(' Expr ',' NUMERAL_TOK ',' NUMERAL_TOK ')'
  215     | "BVTOINT" '(' Expr ')'
  216     | "BOOLEXTRACT" '(' Expr ',' NUMERAL_TOK ')'
  217     | "BVPLUS" '(' NUMERAL_TOK ',' Exprs ')'
  218     | "BVSUB" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
  219     | "BVUDIV" '(' Expr ',' Expr ')'
  220     | "BVSDIV" '(' Expr ',' Expr ')'
  221     | "BVUREM" '(' Expr ',' Expr ')'
  222     | "BVSREM" '(' Expr ',' Expr ')'
  223     | "BVSMOD" '(' Expr ',' Expr ')'
  224     | "BVSHL" '(' Expr ',' Expr ')'
  225     | "BVASHR" '(' Expr ',' Expr ')'
  226     | "BVLSHR" '(' Expr ',' Expr ')'
  227     | "BVUMINUS" '(' Expr ')'
  228     | "BVMULT" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
  229     | "DISTINCT" '(' Exprs ')'

  230 AndExpr: AndExpr "AND" Expr
  231        | Expr "AND" Expr

  232 OrExpr: OrExpr "OR" Expr
  233       | Expr "OR" Expr

  234 Conditional: "IF" Expr "THEN" Expr ElseRest

  235 ElseRest: "ELSE" Expr "ENDIF"
  236         | "ELSIF" Expr "THEN" Expr ElseRest

  237 Exprs: Expr
  238      | Exprs ',' Expr

  239 Pattern: "PATTERN" '(' Exprs ')' ':'

  240 Patterns: Pattern
  241         | Patterns Pattern

  242 Update: UpdatePositionNode ":=" Expr

  243 Updates: Update
  244        | Updates ',' Update

  245 UpdatePositionNode: UpdatePosition

  246 UpdatePosition: '[' Expr ']'
  247               | Identifier
  248               | '.' Identifier
  249               | '.' Numeral
  250               | UpdatePosition '[' Expr ']'
  251               | UpdatePosition Identifier
  252               | UpdatePosition '.' Identifier
  253               | UpdatePosition '.' Numeral

  254 Lambda: "LAMBDA" '(' BoundVarDecls ')' ':' Expr

  255 QuantExpr: "FORALL" '(' BoundVarDecls ')' ':' Expr
  256          | "FORALL" '(' BoundVarDecls ')' ':' Patterns Expr
  257          | "EXISTS" '(' BoundVarDecls ')' ':' Expr
  258          | "EXISTS" '(' BoundVarDecls ')' ':' Patterns Expr

  259 ArrayLiteral: "ARRAY" '(' BoundVarDecl ')' ':' Expr

  260 RecordLiteral: "(#" RecordEntries "#)"

  261 RecordEntries: RecordEntry
  262              | RecordEntries ',' RecordEntry

  263 RecordEntry: Identifier ":=" Expr

  264 TupleLiteral: '(' Exprs ',' Expr ')'

  265 LetDeclsNode: LetDecls

  266 LetDecls: LetDecl
  267         | LetDecls ',' LetDecl

  268 LetDecl: Identifier '=' Expr
  269        | Identifier ':' Type '=' Expr

  270 LetExpr: "LET" LetDeclsNode "IN" Expr

  271 TypeLetDeclsNode: TypeLetDecls

  272 TypeLetDecls: TypeLetDecl
  273             | TypeLetDecls ',' TypeLetDecl

  274 TypeLetDecl: Identifier '=' Expr
  275            | Identifier ':' "TYPE" '=' Expr

  276 TypeLetExpr: "LET" TypeLetDeclsNode "IN" Type

  277 BoundVarDecl: IDs ':' Type

  278 BoundVarDecls: BoundVarDecl
  279              | BoundVarDecls ',' BoundVarDecl

  280 BoundVarDeclNode: BoundVarDecls

  281 ConstDecl: Identifier ':' Type '=' Expr
  282          | Identifier ':' Type
  283          | Identifier '(' BoundVarDeclNode ')' ':' Type '=' Expr
  284          | Identifier '(' BoundVarDeclNode ')' ':' Type
  285          | Identifier ',' IDs ':' Type

  286 TypeDecl: DataType
  287         | Identifier ':' "TYPE" '=' TypeDef
  288         | Identifier ':' "TYPE"
  289         | Identifier ',' IDs ':' "TYPE"


Terminals, with rules where they appear

$end (0) 0
'(' (40) 30 103 113 119 129 130 134 151 152 169 179 185 188 195 196
    197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212
    214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229
    239 254 255 256 257 258 259 264 283 284
')' (41) 30 103 113 119 129 130 134 151 152 169 179 185 188 195 196
    197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212
    214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229
    239 254 255 256 257 258 259 264 283 284
',' (44) 108 115 122 125 126 130 145 179 195 196 197 198 199 200 201
    202 203 204 205 206 207 208 209 210 211 212 214 216 217 218 219
    220 221 222 223 224 225 226 228 238 244 262 264 267 273 279 285
    289
'.' (46) 154 155 248 249 252 253
':' (58) 83 86 116 123 190 239 254 255 256 257 258 259 269 275 277
    281 282 283 284 285 287 288 289
';' (59) 1 2 3 4
'=' (61) 86 109 170 268 269 274 275 281 283 287
'[' (91) 86 117 124 137 153 190 246 250
']' (93) 86 117 124 137 153 190 246 250
'_' (95) 138 141
'{' (123) 128
'}' (125) 128
error (256)
"DISTINCT" (258) 229
"AND" (259) 230 231
"ARRAY" (260) 127 259
"BOOLEAN" (261) 131
"DATATYPE" (262) 106
"ELSE" (263) 235
"ELSIF" (264) 236
"END" (265) 106
"ENDIF" (266) 235
"EXISTS" (267) 257 258
"FALSE" (268) 165
"FORALL" (269) 255 256
"IN" (270) 270 276
"IF" (271) 234
"LAMBDA" (272) 254
"SIMULATE" (273) 152
"LET" (274) 270 276
"NOT" (275) 167
"IS_INTEGER" (276) 168
"OF" (277) 127
"OR" (278) 232 233
"REAL" (279) 135
"INT" (280) 136
"SUBTYPE" (281) 129 130
"BITVECTOR" (282) 134
"THEN" (283) 234 236
"TRUE" (284) 164
"TYPE" (285) 275 287 288 289
"WITH" (286) 156
"XOR" (287) 172
"TCC" (288) 169
"PATTERN" (289) 239
DONE_TOK (290) 5
".." (291) 137
":=" (292) 86 242 263
"/=" (293) 171
"=>" (294) 175
"<=>" (295) 176
"+" (296) 177
"-" (297) 42 140 143 166 178
"*" (298) 179 180
"^" (299) 181
"/" (300) 182
"MOD" (301)
"DIV" (302)
"<" (303) 186
"<=" (304) 187
">" (305) 183
">=" (306) 184
"FLOOR" (307) 185
"<<" (308) 193
">>" (309) 194
"BVPLUS" (310) 217
"BVSUB" (311) 218
"BVUDIV" (312) 219
"BVSDIV" (313) 220
"BVUREM" (314) 221
"BVSREM" (315) 222
"BVSMOD" (316) 223
"BVSHL" (317) 224
"BVASHR" (318) 225
"BVLSHR" (319) 226
"BVUMINUS" (320) 227
"BVMULT" (321) 228
"[#" (322) 120
"#]" (323) 120
"(#" (324) 260
"#)" (325) 260
"->" (326) 117 118 119
"~" (327) 189
"&" (328) 191
"|" (329) 111 192
"BVXOR" (330) 195
"BVNAND" (331) 196
"BVNOR" (332) 197
"BVCOMP" (333) 198
"BVXNOR" (334) 199
"@" (335) 213
"BVTOINT" (336) 215
"INTTOBV" (337) 214
"BOOLEXTRACT" (338) 216
"BVLT" (339) 205
"BVGT" (340) 206
"BVLE" (341) 207
"BVGE" (342) 208
"SX" (343) 200
"BVZEROEXTEND" (344) 201
"BVREPEAT" (345) 202
"BVROTL" (346) 203
"BVROTR" (347) 204
"BVSLT" (348) 209
"BVSGT" (349) 210
"BVSLE" (350) 211
"BVSGE" (351) 212
"ARITH_VAR_ORDER" (352) 30
"ASSERT" (353) 31
"QUERY" (354) 32
"CHECKSAT" (355) 33 34
"CONTINUE" (356) 35
"RESTART" (357) 36
"HELP" (358) 44 45
"DBG" (359) 37 38
"TRACE" (360) 39
"UNTRACE" (361) 40
"OPTION" (362) 41 42 43
"TRANSFORM" (363) 46
"PRINT" (364) 47
"PRINT_TYPE" (365) 48
"CALL" (366) 49
"ECHO" (367) 50 51
"INCLUDE" (368) 52
"DUMP_PROOF" (369) 53
"DUMP_ASSUMPTIONS" (370) 54
"DUMP_SIG" (371) 55
"DUMP_TCC" (372) 56
"DUMP_TCC_ASSUMPTIONS" (373) 57
"DUMP_TCC_PROOF" (374) 58
"DUMP_CLOSURE" (375) 59
"DUMP_CLOSURE_PROOF" (376) 60
"WHERE" (377) 61
"ASSERTIONS" (378) 62
"ASSUMPTIONS" (379) 63
"COUNTEREXAMPLE" (380) 64
"COUNTERMODEL" (381) 65
"PUSH" (382) 66 67
"POP" (383) 70 71
"POPTO" (384) 74 75
"PUSH_SCOPE" (385) 68 69
"POP_SCOPE" (386) 72 73
"POPTO_SCOPE" (387) 76 77
"RESET" (388) 78
"CONTEXT" (389) 79 80
"FORGET" (390) 81
"GET_TYPE" (391) 82
"CHECK_TYPE" (392) 83
"GET_CHILD" (393) 84
"GET_OP" (394) 85
"SUBSTITUTE" (395) 86
UMINUS_TOK (396)
ID_TOK (397) 87
STRINGLIT_TOK (398) 88
NUMERAL_TOK (399) 89 190 193 194 200 201 202 203 204 214 216 217 218
    228
HEX_TOK (400) 91
BINARY_TOK (401) 90


Nonterminals, with rules where they appear

$accept (159)
    on left: 0
cmd (160)
    on left: 1 2 3 4 5, on right: 0
other_cmd (161)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28 29, on right: 3
Arith_Var_Order (162)
    on left: 30, on right: 29
Assert (163)
    on left: 31, on right: 6
Query (164)
    on left: 32 33 34 35 36, on right: 7
Dbg (165)
    on left: 37 38, on right: 8
Trace (166)
    on left: 39 40, on right: 9
Option (167)
    on left: 41 42 43, on right: 10
Help (168)
    on left: 44 45, on right: 11
Transform (169)
    on left: 46, on right: 12
Print (170)
    on left: 47 48, on right: 13
Call (171)
    on left: 49, on right: 14
Echo (172)
    on left: 50 51, on right: 15
Include (173)
    on left: 52, on right: 16
DumpCommand (174)
    on left: 53 54 55 56 57 58 59 60, on right: 17
Where (175)
    on left: 61 62 63 64 65, on right: 18
Push (176)
    on left: 66 67 68 69, on right: 19
Pop (177)
    on left: 70 71 72 73, on right: 20
PopTo (178)
    on left: 74 75 76 77 78, on right: 21
Context (179)
    on left: 79 80, on right: 22
Forget (180)
    on left: 81, on right: 28
Get_Type (181)
    on left: 82, on right: 26
Check_Type (182)
    on left: 83, on right: 27
Get_Child (183)
    on left: 84, on right: 24
Get_Op (184)
    on left: 85, on right: 25
Substitute (185)
    on left: 86, on right: 23
Identifier (186)
    on left: 87, on right: 49 81 86 92 109 112 113 116 123 144 145
    147 154 247 248 251 252 263 268 269 274 275 281 282 283 284 285
    287 288 289
StringLiteral (187)
    on left: 88, on right: 37 39 40 41 42 43 44 50 52 79
Numeral (188)
    on left: 89, on right: 41 42 66 68 70 72 74 76 84 134 139 140 142
    143 148 155 249 253
Binary (189)
    on left: 90, on right: 149
Hex (190)
    on left: 91, on right: 150
Type (191)
    on left: 92 93, on right: 48 83 86 103 104 116 117 118 119 123
    125 126 127 269 276 277 281 282 283 284 285
TypeNotIdentifier (192)
    on left: 94 95 96 97 98 99 100 101 102 103, on right: 93
TypeDef (193)
    on left: 104 105, on right: 287
DataType (194)
    on left: 106, on right: 286
SingleDataTypes (195)
    on left: 107 108, on right: 106 108
SingleDataType (196)
    on left: 109, on right: 107 108
Constructors (197)
    on left: 110 111, on right: 109 111
Constructor (198)
    on left: 112 113, on right: 110 111
VarDecls (199)
    on left: 114 115, on right: 113 115
VarDecl (200)
    on left: 116, on right: 114 115
FunctionType (201)
    on left: 117 118 119, on right: 95
RecordType (202)
    on left: 120, on right: 99
FieldDecls (203)
    on left: 121 122, on right: 120 122
FieldDecl (204)
    on left: 123, on right: 121 122
TupleType (205)
    on left: 124, on right: 98
TypeList (206)
    on left: 125 126, on right: 119 124 126
ArrayType (207)
    on left: 127, on right: 94
ScalarType (208)
    on left: 128, on right: 105
SubType (209)
    on left: 129 130, on right: 102
BasicType (210)
    on left: 131 132 133, on right: 96
BitvectorType (211)
    on left: 134, on right: 101
Real (212)
    on left: 135, on right: 132
Int (213)
    on left: 136, on right: 133
SubrangeType (214)
    on left: 137, on right: 97
LeftBound (215)
    on left: 138 139 140, on right: 137
RightBound (216)
    on left: 141 142 143, on right: 137
reverseIDs (217)
    on left: 144 145, on right: 145 146
IDs (218)
    on left: 146, on right: 128 277 285 289
Expr (219)
    on left: 147 148 149 150 151 152 153 154 155 156 157 158 159 160
    161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176
    177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192
    193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208
    209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224
    225 226 227 228 229, on right: 31 32 33 36 46 47 49 82 83 84 85
    86 129 130 151 153 154 155 156 166 167 168 169 170 171 172 175
    176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191
    192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 218 219 220 221 222 223 224
    225 226 227 228 230 231 232 233 234 235 236 237 238 242 246 250
    254 255 256 257 258 259 263 264 268 269 270 274 275 281 283
AndExpr (220)
    on left: 230 231, on right: 174 230
OrExpr (221)
    on left: 232 233, on right: 173 232
Conditional (222)
    on left: 234, on right: 163
ElseRest (223)
    on left: 235 236, on right: 234 236
Exprs (224)
    on left: 237 238, on right: 30 151 152 217 229 238 239 264
Pattern (225)
    on left: 239, on right: 240 241
Patterns (226)
    on left: 240 241, on right: 241 256 258
Update (227)
    on left: 242, on right: 243 244
Updates (228)
    on left: 243 244, on right: 156 244
UpdatePositionNode (229)
    on left: 245, on right: 242
UpdatePosition (230)
    on left: 246 247 248 249 250 251 252 253, on right: 245 250 251
    252 253
Lambda (231)
    on left: 254, on right: 157
QuantExpr (232)
    on left: 255 256 257 258, on right: 158
ArrayLiteral (233)
    on left: 259, on right: 160
RecordLiteral (234)
    on left: 260, on right: 161
RecordEntries (235)
    on left: 261 262, on right: 260 262
RecordEntry (236)
    on left: 263, on right: 261 262
TupleLiteral (237)
    on left: 264, on right: 162
LetDeclsNode (238)
    on left: 265, on right: 270
LetDecls (239)
    on left: 266 267, on right: 265 267
LetDecl (240)
    on left: 268 269, on right: 266 267
LetExpr (241)
    on left: 270, on right: 159
TypeLetDeclsNode (242)
    on left: 271, on right: 276
TypeLetDecls (243)
    on left: 272 273, on right: 271 273
TypeLetDecl (244)
    on left: 274 275, on right: 272 273
TypeLetExpr (245)
    on left: 276, on right: 100
BoundVarDecl (246)
    on left: 277, on right: 259 278 279
BoundVarDecls (247)
    on left: 278 279, on right: 254 255 256 257 258 279 280
BoundVarDeclNode (248)
    on left: 280, on right: 283 284
ConstDecl (249)
    on left: 281 282 283 284 285, on right: 2
TypeDecl (250)
    on left: 286 287 288 289, on right: 1


state 0

    0 $accept: . cmd $end

    "DATATYPE"              shift, and go to state 1
    DONE_TOK                shift, and go to state 2
    "ARITH_VAR_ORDER"       shift, and go to state 3
    "ASSERT"                shift, and go to state 4
    "QUERY"                 shift, and go to state 5
    "CHECKSAT"              shift, and go to state 6
    "CONTINUE"              shift, and go to state 7
    "RESTART"               shift, and go to state 8
    "HELP"                  shift, and go to state 9
    "DBG"                   shift, and go to state 10
    "TRACE"                 shift, and go to state 11
    "UNTRACE"               shift, and go to state 12
    "OPTION"                shift, and go to state 13
    "TRANSFORM"             shift, and go to state 14
    "PRINT"                 shift, and go to state 15
    "PRINT_TYPE"            shift, and go to state 16
    "CALL"                  shift, and go to state 17
    "ECHO"                  shift, and go to state 18
    "INCLUDE"               shift, and go to state 19
    "DUMP_PROOF"            shift, and go to state 20
    "DUMP_ASSUMPTIONS"      shift, and go to state 21
    "DUMP_SIG"              shift, and go to state 22
    "DUMP_TCC"              shift, and go to state 23
    "DUMP_TCC_ASSUMPTIONS"  shift, and go to state 24
    "DUMP_TCC_PROOF"        shift, and go to state 25
    "DUMP_CLOSURE"          shift, and go to state 26
    "DUMP_CLOSURE_PROOF"    shift, and go to state 27
    "WHERE"                 shift, and go to state 28
    "ASSERTIONS"            shift, and go to state 29
    "ASSUMPTIONS"           shift, and go to state 30
    "COUNTEREXAMPLE"        shift, and go to state 31
    "COUNTERMODEL"          shift, and go to state 32
    "PUSH"                  shift, and go to state 33
    "POP"                   shift, and go to state 34
    "POPTO"                 shift, and go to state 35
    "PUSH_SCOPE"            shift, and go to state 36
    "POP_SCOPE"             shift, and go to state 37
    "POPTO_SCOPE"           shift, and go to state 38
    "RESET"                 shift, and go to state 39
    "CONTEXT"               shift, and go to state 40
    "FORGET"                shift, and go to state 41
    "GET_TYPE"              shift, and go to state 42
    "CHECK_TYPE"            shift, and go to state 43
    "GET_CHILD"             shift, and go to state 44
    "GET_OP"                shift, and go to state 45
    "SUBSTITUTE"            shift, and go to state 46
    ID_TOK                  shift, and go to state 47
    ';'                     shift, and go to state 48

    cmd              go to state 49
    other_cmd        go to state 50
    Arith_Var_Order  go to state 51
    Assert           go to state 52
    Query            go to state 53
    Dbg              go to state 54
    Trace            go to state 55
    Option           go to state 56
    Help             go to state 57
    Transform        go to state 58
    Print            go to state 59
    Call             go to state 60
    Echo             go to state 61
    Include          go to state 62
    DumpCommand      go to state 63
    Where            go to state 64
    Push             go to state 65
    Pop              go to state 66
    PopTo            go to state 67
    Context          go to state 68
    Forget           go to state 69
    Get_Type         go to state 70
    Check_Type       go to state 71
    Get_Child        go to state 72
    Get_Op           go to state 73
    Substitute       go to state 74
    Identifier       go to state 75
    DataType         go to state 76
    ConstDecl        go to state 77
    TypeDecl         go to state 78


state 1

  106 DataType: "DATATYPE" . SingleDataTypes "END"

    ID_TOK  shift, and go to state 47

    Identifier       go to state 79
    SingleDataTypes  go to state 80
    SingleDataType   go to state 81


state 2

    5 cmd: DONE_TOK .

    $default  reduce using rule 5 (cmd)


state 3

   30 Arith_Var_Order: "ARITH_VAR_ORDER" . '(' Exprs ')'

    '('  shift, and go to state 82


state 4

   31 Assert: "ASSERT" . Expr

    "DISTINCT"      shift, and go to state 83
    "ARRAY"         shift, and go to state 84
    "EXISTS"        shift, and go to state 85
    "FALSE"         shift, and go to state 86
    "FORALL"        shift, and go to state 87
    "IF"            shift, and go to state 88
    "LAMBDA"        shift, and go to state 89
    "SIMULATE"      shift, and go to state 90
    "LET"           shift, and go to state 91
    "NOT"           shift, and go to state 92
    "IS_INTEGER"    shift, and go to state 93
    "TRUE"          shift, and go to state 94
    "TCC"           shift, and go to state 95
    "-"             shift, and go to state 96
    "FLOOR"         shift, and go to state 97
    "BVPLUS"        shift, and go to state 98
    "BVSUB"         shift, and go to state 99
    "BVUDIV"        shift, and go to state 100
    "BVSDIV"        shift, and go to state 101
    "BVUREM"        shift, and go to state 102
    "BVSREM"        shift, and go to state 103
    "BVSMOD"        shift, and go to state 104
    "BVSHL"         shift, and go to state 105
    "BVASHR"        shift, and go to state 106
    "BVLSHR"        shift, and go to state 107
    "BVUMINUS"      shift, and go to state 108
    "BVMULT"        shift, and go to state 109
    "(#"            shift, and go to state 110
    "~"             shift, and go to state 111
    "BVXOR"         shift, and go to state 112
    "BVNAND"        shift, and go to state 113
    "BVNOR"         shift, and go to state 114
    "BVCOMP"        shift, and go to state 115
    "BVXNOR"        shift, and go to state 116
    "BVTOINT"       shift, and go to state 117
    "INTTOBV"       shift, and go to state 118
    "BOOLEXTRACT"   shift, and go to state 119
    "BVLT"          shift, and go to state 120
    "BVGT"          shift, and go to state 121
    "BVLE"          shift, and go to state 122
    "BVGE"          shift, and go to state 123
    "SX"            shift, and go to state 124
    "BVZEROEXTEND"  shift, and go to state 125
    "BVREPEAT"      shift, and go to state 126
    "BVROTL"        shift, and go to state 127
    "BVROTR"        shift, and go to state 128
    "BVSLT"         shift, and go to state 129
    "BVSGT"         shift, and go to state 130
    "BVSLE"         shift, and go to state 131
    "BVSGE"         shift, and go to state 132
    '('             shift, and go to state 133
    ID_TOK          shift, and go to state 47
    NUMERAL_TOK     shift, and go to state 134
    HEX_TOK         shift, and go to state 135
    BINARY_TOK      shift, and go to state 136

    Identifier     go to state 137
    Numeral        go to state 138
    Binary         go to state 139
    Hex            go to state 140
    Expr           go to state 141
    AndExpr        go to state 142
    OrExpr         go to state 143
    Conditional    go to state 144
    Lambda         go to state 145
    QuantExpr      go to state 146
    ArrayLiteral   go to state 147
    RecordLiteral  go to state 148
    TupleLiteral   go to state 149
    LetExpr        go to state 150


state 5

   32 Query: "QUERY" . Expr
